--- a/src/App.scss
+++ b/src/App.scss
@@ -7,75 +7,15 @@
   box-sizing: border-box;
 }
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
-///////////////////////////////////////////
-//HEADER
-/////////////////////////////////////////
-.header {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background: url("./assets/images/Hero.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  @media screen and (max-width: 1200px) {
-    background-size: cover;
-    background-position: 80% 100%;
-    height: 60vh;
-  }
 
-  &__title {
-    font-family: "SanReg";
-    font-weight: 400;
-    color: $white;
-    font-size: clamp(1rem, 4vw, 6rem);
-    line-height: 1.1;
-    padding-top: 25%;
-  }
-  &__button {
-    position: relative;
-    cursor: pointer;
-    width: 300px;
-    height: 50px;
-    border-radius: 123px;
-    background: transparent;
-    text-align: center;
-    font-family: "NotoBold";
-    font-size: 1.25rem;
-    margin-top: 4rem;
-    border: 1px solid $white;
-    color: $white;
-    overflow: hidden;
-
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      content: "";
-      width: 100%;
-      height: 100%;
-      background-color: $white;
-      opacity: 0;
-      color: red;
-    }
-    &:hover {
-      background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
-      // background-color: $white;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      &:before {
-        opacity: 0.5;
-      }
-    }
-  }
-}
 ///////////////////////////////////////////
 //NAVBAR
 ///////////////////////////
 .navbar {
-  position: fixed;
+  // position: fixed;
   z-index: 100;
   top: 0;
   width: 100%;
@@ -99,7 +39,7 @@ body {
   &__menu {
     display: flex;
     justify-content: end;
-    min-width: 50%;
+    min-width: 55%;
     max-width: 70vw;
     @media screen and (max-width: 1200px) {
       min-width: 60%;
@@ -139,4 +79,118 @@ body {
       transition: 0.4s ease-in-out;
     }
   }
+}
+
+///////////////////////////////////////////
+//HEADER
+/////////////////////////////////////////
+.header {
+  position: relative;
+  // min-width: 100vw;
+
+  background: url("./assets/images/Hero.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  @media screen and (max-width: 1200px) {
+    background-size: cover;
+    background-position: 80% 100%;
+    height: 60vh;
+  }
+
+  &__title {
+    font-family: "SanReg";
+    font-weight: 400;
+    color: $white;
+    font-size: clamp(1rem, 4vw, 6rem);
+    line-height: 1.1;
+    padding-top: 25%;
+  }
+  &__button {
+    position: relative;
+    cursor: pointer;
+    width: 300px;
+    height: 50px;
+    border-radius: 123px;
+    background: transparent;
+    text-align: center;
+    font-family: "NotoBold";
+    font-size: 1.25rem;
+    margin: 4rem 0;
+    border: 1px solid $white;
+    color: $white;
+    overflow: hidden;
+
+    &:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-color: $white;
+      opacity: 0;
+      color: red;
+    }
+    &:hover {
+      background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
+      // background-color: $white;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      &:before {
+        opacity: 0.5;
+      }
+    }
+  }
+}
+
+///////////////////////////////////////////
+//INTRO
+/////////////////////////////////////////
+.intro__content {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.intro__content-image {
+  // background-color: green;
+  position: relative;
+  width: 100%;
+  // top: 0;
+  // left: 0;
+  // background-color: $blue;
+  padding: 8rem 0 6rem 2rem;
+  &:before {
+    position: absolute;
+    top: 0;
+    left: -35%;
+    content: "";
+    width: 120%;
+    height: 100%;
+    background-color: $blue;
+    z-index: -2;
+  }
+}
+.intro__content-image img {
+  width: 100%;
+}
+.intro__content-info {
+  // background-color: red;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 0 2rem;
+  &--title {
+    padding: 2rem 0;
+  }
+  &--description {
+  }
+}
+.intro__banner {
+  padding: 10rem 0;
+  margin: 0 auto;
+  text-align: center;
 }
