--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -35,6 +35,7 @@
 
 $white: #ffffff;
 $black: #000000;
+$gray: #787878;
 $blue: #3047b0;
 $pink: #ff0082;
 $violet: #780096;
@@ -55,19 +56,17 @@ $gradientDark: #780096;
   width: 300px;
   height: 50px;
   border-radius: 123px;
-  //   background: transparent;
+  background: transparent;
   text-align: center;
   font-family: "NotoBold";
   font-size: 1.25rem;
   border: 1px solid $violet;
   //gradient text
-  color: white;
   background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  transition: 0.4s ease-in;
+
   &:hover {
-    transition: 0.4s ease-in;
     -webkit-background-clip: text;
     background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
     -webkit-text-fill-color: $white;
@@ -75,7 +74,14 @@ $gradientDark: #780096;
     transform: scale(1.05);
   }
 }
-
+.section-name {
+  font-family: "NotoReg";
+  font-size: 1rem;
+  color: $black;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: 2rem 0;
+}
 .section-title {
   font-family: "SanSoft";
   font-weight: 400;
@@ -94,6 +100,11 @@ $gradientDark: #780096;
   line-height: 72px;
   font-family: "SanBold";
 
+  background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.text-gradient {
   background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
