Added Benefits section

--- a/src/App.scss
+++ b/src/App.scss
@@ -257,3 +257,17 @@ body {
   font-size: 2.125rem;
   color: $pink;
 }
+
+///////////////////////////////////////////
+//BENEFITS
+/////////////////////////////////////////
+.benefits__slider {
+  padding: 5rem 0;
+}
+.slider__text {
+  font-family: "SanSoft";
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 2rem;
+}
