--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -109,3 +109,40 @@ $gradientDark: #780096;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+////////////////////////////////////
+//SLIDER
+////////////////////////////////////
+
+.slider {
+  cursor: grab;
+  overflow-x: hidden;
+  // background-color: pink;
+  // width: 100%;
+  height: 30rem;
+  // margin: 5rem 0;
+  padding: 2rem;
+}
+.slider__inner {
+  display: flex;
+  column-gap: 2rem;
+  // background-color: skyblue;
+  // width: 100%;
+  height: 100%;
+}
+.slider__items {
+  box-shadow: 0px 0px 5px 5px rgb(224, 220, 220);
+}
+.slider__item {
+  height: 20rem;
+  min-width: 20rem;
+  // overflow: hidden;
+
+  padding: 2rem;
+}
+.slider__item img {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  object-fit: cover;
+}
