--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   overflow-x: hidden;
-  scroll-behavior: smooth;
 }
 
 ///////////////////////////////////////////
@@ -325,4 +327,108 @@ body {
 .values__banner {
   padding: 8rem 0 4rem;
   text-align: center;
+}
+
+///////////////////////////////////////////
+//PEOPLE
+/////////////////////////////////////////
+
+.people__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 0 auto;
+  padding: 5rem 0;
+  &--images {
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    margin: 4rem;
+  }
+}
+.images__left {
+  position: relative;
+  width: 100%;
+  gap: 1rem;
+  font-family: "NotoReg";
+  font-size: 1.25rem;
+  &:before {
+    position: absolute;
+    top: 90%;
+    left: -20%;
+    content: "Wierzymy  w siłę ludzi.";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: $white;
+    width: 49%;
+    height: 15%;
+    background-image: linear-gradient(to right, $gradientLight, $gradientDark);
+  }
+}
+.images__left img {
+  // position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.images__right {
+  position: relative;
+  width: 100%;
+  font-family: "NotoReg";
+  font-size: 1.25rem;
+  &--top {
+    padding-bottom: 1rem;
+    &:before {
+      position: absolute;
+      top: -7%;
+      right: 10%;
+      text-align: center;
+      content: "Przyjmujemy i akceptujemy";
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $white;
+      width: 49%;
+      height: 15%;
+      background-image: linear-gradient(
+        to right,
+        $gradientLight,
+        $gradientDark
+      );
+    }
+  }
+  &--bottom {
+    &:before {
+      position: absolute;
+      top: 55%;
+      right: -45%;
+      content: "Inspirujemy i motywujemy";
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $white;
+      width: 49%;
+      height: 15%;
+      background-image: linear-gradient(
+        to right,
+        $gradientLight,
+        $gradientDark
+      );
+    }
+  }
+}
+.images__right img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+.people__content--info {
+  font-family: "NotoReg";
+  font-size: 1.125rem;
+  padding: 2rem;
 }
