--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -103,7 +103,11 @@ $gradientDark: #780096;
   font-size: 1.125rem;
   line-height: 27px;
 }
+.banner {
+  text-align: center;
+}
 .banner__h1 {
+  text-align: center;
   font-size: 4rem;
   line-height: 72px;
   font-family: "SanBold";
