--- a/src/App.scss
+++ b/src/App.scss
@@ -108,39 +108,20 @@ body {
     padding-top: 25%;
   }
   &__button {
-    position: relative;
     cursor: pointer;
     width: 300px;
     height: 50px;
     border-radius: 123px;
-    background: transparent;
+    background-color: transparent;
     text-align: center;
     font-family: "NotoBold";
     font-size: 1.25rem;
     margin: 4rem 0;
     border: 1px solid $white;
     color: $white;
-    overflow: hidden;
-
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      content: "";
-      width: 100%;
-      height: 100%;
-      background-color: $white;
-      opacity: 0;
-      color: red;
-    }
     &:hover {
-      background: -webkit-linear-gradient(45deg, $gradientLight, $gradientDark);
-      // background-color: $white;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      &:before {
-        opacity: 0.5;
-      }
+      color: $gradientLight;
+      background-color: $white;
     }
   }
 }
@@ -506,4 +487,51 @@ body {
   align-items: center;
   gap: 5rem;
   flex-wrap: wrap;
+}
+//////////////////////////////////
+//FOOTER
+//////////////////////////////////
+.footer {
+  background-color: $violet;
+}
+.footer__content {
+  width: 50%;
+  margin: 0 auto;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  color: $white;
+  gap: 15rem;
+  font-family: "NotoReg";
+  line-height: 25px;
+  &--left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.social {
+  display: flex;
+  gap: 2rem;
+}
+.social-icon {
+  padding: 1rem;
+}
+.email {
+  padding: 2rem 0;
+}
+.location-top {
+  padding: 2rem 0;
+  display: flex;
+  gap: 5rem;
+}
+.city {
+  font-weight: bold;
+  font-size: 1.125rem;
+}
+.footer-copyright {
+  background-color: $white;
+}
+.footer-copyright-text {
+  text-align: center;
 }
