--- a/src/App.scss
+++ b/src/App.scss
@@ -17,14 +17,14 @@ body {
 //NAVBAR
 ///////////////////////////
 .navbar {
-  position: fixed;
+  position: relative;
   z-index: 100;
   top: 0;
   width: 100%;
   height: 70px;
   background: transparent;
-  // background: blue;
   padding: 1rem 0;
+
   @media screen and (max-width: 990px) {
     display: none;
   }
@@ -82,13 +82,23 @@ body {
     }
   }
 }
-
+.navbar-fixed {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  // background: linear-gradient(to right, $gradientLight, $gradientDark);
+  background-color: $fixedNav;
+  padding: 1rem 0;
+}
 ///////////////////////////////////////////
 //HEADER
 /////////////////////////////////////////
 .header {
   position: relative;
   // min-width: 100vw;
+  top: -70px;
 
   background: url("./assets/images/Hero.png");
   background-repeat: no-repeat;
