--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -39,6 +39,7 @@ $gray: #787878;
 $blue: #3047b0;
 $pink: #ff0082;
 $violet: #780096;
+$fixedNav: #e2548c;
 //GRADIENT
 $gradientLight: #ff0082;
 $gradientDark: #780096;
