--- a/src/App.scss
+++ b/src/App.scss
@@ -114,24 +114,23 @@ body {
 /////////////////////////////////////////
 .header {
   position: relative;
-  // min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   top: -70px;
 
   background: url("./assets/images/Hero.png");
   background-repeat: no-repeat;
   background-size: cover;
-  @media screen and (max-width: 1200px) {
-    background-size: cover;
-    background-position: 80% 100%;
-    height: 60vh;
-  }
-
+  background-position: 30% 100%;
+}
+.title-container {
+  position: absolute;
+  bottom: 0;
   &__title {
     font-family: "SanReg";
     font-weight: 400;
     color: $white;
-    font-size: clamp(1rem, 4vw, 6rem);
+    font-size: clamp(4.25rem, 4.5vw, 6rem);
     line-height: 1.1;
     padding-top: 25%;
   }
@@ -607,7 +606,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 10rem;
   flex-wrap: wrap;
 }
 //////////////////////////////////
