--- a/src/App.scss
+++ b/src/App.scss
@@ -928,8 +928,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem 10rem;
+  gap: 5rem 11rem;
   flex-wrap: wrap;
+  max-width: 80%;
 }
 //////////////////////////////////
 //FOOTER
