btns gap resize

--- a/src/App.scss
+++ b/src/App.scss
@@ -930,7 +930,7 @@ body {
   align-items: center;
   gap: 5rem 11rem;
   flex-wrap: wrap;
-  max-width: 80%;
+  // max-width: 80%;
 }
 //////////////////////////////////
 //FOOTER
