--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -139,7 +139,7 @@ $gradientDark: #780096;
   font-size: 4rem;
   line-height: 72px;
   font-family: "SanBold";
-  font-size: clamp(3rem, 3vw, 4rem);
+  // font-size: clamp(3rem, 4vw, 4rem);
   @media screen and (max-width: 1440px) {
   }
   @media screen and (max-width: 756px) {
@@ -167,7 +167,7 @@ $gradientDark: #780096;
   // background-color: pink;
   width: 80%;
   height: 30rem;
-  margin: 5rem 0 5rem 10rem;
+  margin: 5rem 0 0rem 10rem;
   padding: 2rem;
   @media screen and (max-width: 1440px) {
     height: 26rem;
