--- a/src/App.scss
+++ b/src/App.scss
@@ -96,6 +96,9 @@ body {
   @media screen and (max-width: 1024px) {
     height: calc(100vh - 140px);
   }
+  @media screen and (max-width: 375px) {
+    height: calc(100vh - 155px);
+  }
 }
 .modal__container {
   z-index: 100;
@@ -113,12 +116,20 @@ body {
   @media screen and (max-width: 756px) {
     bottom: 20%;
   }
+  @media screen and (max-width: 375px) {
+    bottom: 22%;
+    width: 90%;
+    padding: 1rem;
+  }
 }
 .modal__container-text {
   overflow-x: hidden;
   padding: 2rem 1rem;
   width: 100%;
   height: 85%;
+  @media screen and (max-width: 375px) {
+    padding: 0rem;
+  }
 }
 .cookie li {
   margin-left: 2rem;
