resized hero img

--- a/src/App.scss
+++ b/src/App.scss
@@ -394,7 +394,7 @@ a {
   height: 95vh;
   top: -70px;
 
-  background: url("./assets/images/Hero.png");
+  background: url("./assets/images/Hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 30% 100%;
